<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning Android</string>

    <!-- MainActivity -->
    <string name="main_label_ui_button">UI Button</string>
    <string name="main_label_ui_text">UI Text</string>
    <string name="main_label_ui_checkbox">UI Check</string>
    <string name="main_label_ui_radio_button">UI Radio</string>
    <string name="main_label_ui_toggle_button">UI Toggle</string>
    <string name="main_label_ui_spinner">UI Spinner</string>
    <string name="main_label_ui_picker">UI Picker</string>
    <string name="main_label_user_notification_custom_toast">Toast</string>
    <string name="main_label_user_notification_custom_notification">Notification</string>
    <string name="main_label_btn_bc_single_static">Static Broadcast</string>
    <string name="main_label_btn_socket">Socket</string>
    <string name="main_label_btn_httpurlconnection">HttpURLConnection</string>
    <string name="main_label_btn_androidhttpclient">AndroidHttpClient</string>
    <string name="main_label_btn_highest_number">Highest Number</string>
    <string name="main_label_btn_internal_file">Internal File</string>
    <string name="main_label_btn_external_file">External File</string>
    <string name="main_label_btn_contacts">Contacts</string>
    <string name="main_label_btn_contacts_contactprovider">Contacts ContentProvider</string>
    <string name="main_label_btn_download_service">Download Service</string>

    <!-- UIButtonActivity -->
    <string name="title_activity_uibutton">UI Button</string>
    <string name="ui_button_label_btn_simple">Button</string>
    <string name="ui_button_desc_btn_image">Search</string>
    <string name="ui_button_label_btn_compound">Button</string>

    <!-- UITextActivity -->
    <string name="title_activity_uitext">UI Text</string>
    <string name="ui_text_txt_simple">Static Text</string>
    <string name="ui_text_label_txt_edit">Edit Text</string>
    <string name="ui_text_label_txt_password">Password</string>
    <string name="ui_text_label_txt_multiline">Address</string>
    <string name="ui_text_label_txt_email">Email Address</string>
    <string name="ui_text_hint_txt_email">anon@email.org</string>
    <string name="ui_text_label_txt_decimal">Price in PHP</string>
    <string name="ui_text_hint_txt_decimal">0.00</string>

    <!-- UICheckboxActivity -->
    <string name="title_activity_uicheckbox">UICheckbox</string>
    <string name="ui_checkbox_btn_view">View Checked Items</string>

    <!-- UIRadioButtonActivity -->
    <string name="title_activity_uiradio_button">Radio Button Sample</string>
    <string name="ui_radio_button_radio_button_tobe">To Be</string>
    <string name="ui_radio_button_radio_button_nottobe">Not To Be</string>
    <string name="ui_radio_button_btn_view">That Is The Question</string>

    <!-- UIToggleButtonActivity -->
    <string name="title_activity_uitoggle_button">Toggle Button Sample</string>
    <string name="ui_toggle_toggle_on">Yes</string>
    <string name="ui_toggle_toggle_off">No</string>
    <string name="ui_toggle_switch_on">Wax On</string>
    <string name="ui_toggle_switch_off">Wax Off</string>

    <!-- UISpinnerActivity -->
    <string name="title_activity_uispinner">Spinner Sample</string>
    <string name="ui_spinner_label">Favorite Language</string>

    <string-array name="ui_spinner_data">
        <item>Java</item>
        <item>Python</item>
        <item>Scala</item>
        <item>C#</item>
    </string-array>

    <string name="ui_spinner_prompt">Choose Your Favorite Language</string>

    <!-- UIPickerActivity -->
    <string name="title_activity_uipicker">Picker Sample</string>
    <string name="ui_picker_date_picker">Set Date</string>
    <string name="ui_picker_date_picker_calendar_desc">Calendar</string>

    <!-- UserNotificationCustomToastActivity -->
    <string name="title_activity_user_notification_custom_toast">Custom Toast Sample</string>
    <string name="user_notification_custom_toast_btn_toast">Show Toast</string>
    <string name="user_notification_custom_toast_event_added">Event Added</string>
    <string name="user_notification_custom_toast_event_added_desc">Calendar</string>

    <!-- UserNotificationCustomNotificationActivity -->
    <string name="title_activity_user_notification_custom_notification">Custom Notification Sample</string>
    <string name="un_custom_notification_btn_notify">Notify</string>
    <string name="title_activity_uncustom_notification_pending">Pending Intent Sample</string>
    <string name="hello_world">Hello from Pending</string>

    <!-- BroadcastReceiverSingleStaticActivity -->
    <string name="title_activity_broadcast_receiver_single_static">Single Static Broadcast Receiver</string>
    <string name="bc_single_static_btn_broadcast">Broadcast</string>

    <!-- SocketHttpGetActivity -->
    <string name="title_activity_socket_http_get">Socket HttpGet Activity</string>
    <string name="socket_httpget_btn_send">Send</string>

    <!-- HttpURLConnectionActivity -->
    <string name="title_activity_http_urlconnection">HttpURLConnection Activity</string>
    <string name="httpurlconn_httpget_btn_send">Send</string>
    <string name="httpurlconn_httpget_btn_preferences">Settings</string>

    <!-- AndroidHttpClientActivity -->
    <string name="title_activity_android_http_client">AndroidHttpClient Activity</string>
    <string name="androidhttpclient_httpget_btn_send">Send</string>

    <!-- HighestNumberSharedPreferencesActivity -->
    <string name="title_activity_highest_number_shared_preferences">Highest Number SharedPreferences Activity</string>
    <string name="highest_number_btn_generate">Generate</string>
    <string name="highest_number_btn_reset">Reset</string>
    <string name="title_activity_random_quotes_preferences">Random Quotes Preferences Activity</string>

    <!-- InternalFileActivity -->
    <string name="title_activity_internal_file">Internal File Activity</string>
    <string name="internal_file_btn_view">View File</string>

    <!-- ExternalFileActivity -->
    <string name="title_activity_external_file">External File Activity</string>
    <string name="external_file_btn_view">View External File</string>

    <!-- ContactsActivity -->
    <string name="title_activity_contacts">Contacts Activity</string>
    <string name="contacts_add_form_label_name">Name</string>
    <string name="contacts_add_form_txt_name_hint">Full Name</string>
    <string name="title_activity_add_contact">Add a Contact</string>
    <string name="contacts_add_contact_btn_cancel">Cancel</string>
    <string name="contacts_add_contact_btn_save">Save</string>
    
    <!-- ContactsContentProviderActivity -->
    <string name="title_activity_contacts_content_provider">Contacts ContentProvider Activity</string>
    
    <!-- DownloadServiceActivity -->
    <string name="title_activity_download_service">Download Service Activity</string>
    <string name="download_service_btn_download">Download</string>
	<string name="download_service_label_status">Status</string>
</resources>
