<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    tools:context="${relativePackage}.${activityClass}" >

    <Button android:id="@+id/main_btn_ui_button" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_label_ui_button" />
    
    <Button android:id="@+id/main_btn_ui_text" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/main_label_ui_text" />
    
    <Button android:id="@+id/main_btn_ui_checkbox" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:text="@string/main_label_ui_checkbox" />
    
    <Button android:id="@+id/main_btn_ui_radio_button" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:text="@string/main_label_ui_radio_button" />
    
    <Button android:id="@+id/main_btn_ui_toggle_button" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:text="@string/main_label_ui_toggle_button" />
    
    <Button android:id="@+id/main_btn_ui_spinner" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:text="@string/main_label_ui_spinner" />
    
    <Button android:id="@+id/main_btn_ui_picker" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:text="@string/main_label_ui_picker" />
    
    <Button android:id="@+id/main_btn_user_notification_custom_toast" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:text="@string/main_label_user_notification_custom_toast" />
</GridLayout>
