<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal">
    <!-- Untick Hardware keyboard present in AVD to see different keyboard layouts for 
    	different input types  -->
	
    <TextView android:id="@+id/ui_text_txt_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/ui_text_txt_simple" />
    
   	<LinearLayout android:layout_width="fill_parent" 
	       android:layout_height="wrap_content"
	       android:orientation="horizontal">
	       <TextView android:id="@+id/ui_label_txt_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.4"
				android:text="@string/ui_text_label_txt_edit"
				android:labelFor="@+id/ui_text_txt_edit" />
	       
	       <EditText android:id="@+id/ui_text_txt_edit"
	           	android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.6"
	           	android:hint="@string/ui_text_label_txt_edit" />
	</LinearLayout>
   
	<LinearLayout android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView android:id="@+id/ui_label_txt_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
	    	android:text="@string/ui_text_label_txt_password"
	    	android:labelFor="@+id/ui_text_txt_password" />
	    
	    <EditText android:id="@+id/ui_text_txt_password"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.6"
	        android:inputType="textPassword"
	        android:hint="@string/ui_text_label_txt_password" />
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	    <TextView android:id="@+id/ui_label_txt_multiline"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
	    	android:text="@string/ui_text_label_txt_multiline"
	    	android:labelFor="@+id/ui_text_txt_multiline" />
	    
	    <EditText android:id="@+id/ui_text_txt_multiline"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.6"
	        android:inputType="textMultiLine"
	        android:minLines="5" />
	</LinearLayout>
  
	<LinearLayout android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_horizontal">
       <TextView android:id="@+id/ui_label_txt_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:text="@string/ui_text_label_txt_email"
			android:labelFor="@+id/ui_text_txt_email" />
       
       <EditText android:id="@+id/ui_text_txt_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.6"
			android:inputType="textEmailAddress"
			android:hint="@string/ui_text_hint_txt_email" 
			android:gravity="right" />
    </LinearLayout>
   
	<LinearLayout android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_horizontal">
       <TextView android:id="@+id/ui_label_txt_decimal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:text="@string/ui_text_label_txt_decimal"
			android:labelFor="@+id/ui_text_txt_decimal" />
       
       <EditText android:id="@+id/ui_text_txt_decimal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.6"
			android:inputType="numberDecimal" 
			android:hint="@string/ui_text_hint_txt_decimal"
			android:gravity="right" />
  	</LinearLayout>	
</LinearLayout>