<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	
    <Button android:id="@+id/ui_button_btn_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal"
        android:text="@string/ui_button_label_btn_simple" />
    
    <ImageButton android:id="@+id/ui_button_btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ui_button_desc_btn_image"
        android:src="@drawable/ic_action_search" />
    
    <Button android:id="@+id/ui_button_btn_compound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal"
        android:text="@string/ui_button_label_btn_compound"
        android:drawableLeft="@drawable/ic_action_search" />
</LinearLayout>